; ModuleID = '/home/carl/AnghaBench/linux/fs/nilfs2/extr_dir.c_nilfs_set_de_type.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nilfs2/extr_dir.c_nilfs_set_de_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nilfs_dir_entry = type { i32 }
%struct.inode = type { i64 }

@nilfs_type_by_mode = common dso_local global i32* null, align 8
@S_IFMT = common dso_local global i64 0, align 8
@S_SHIFT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nilfs_dir_entry*, %struct.inode*)* @nilfs_set_de_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nilfs_set_de_type(%struct.nilfs_dir_entry* %0, %struct.inode* %1) #0 {
  %3 = alloca %struct.nilfs_dir_entry*, align 8
  %4 = alloca %struct.inode*, align 8
  %5 = alloca i64, align 8
  store %struct.nilfs_dir_entry* %0, %struct.nilfs_dir_entry** %3, align 8
  store %struct.inode* %1, %struct.inode** %4, align 8
  %6 = load %struct.inode*, %struct.inode** %4, align 8
  %7 = getelementptr inbounds %struct.inode, %struct.inode* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  store i64 %8, i64* %5, align 8
  %9 = load i32*, i32** @nilfs_type_by_mode, align 8
  %10 = load i64, i64* %5, align 8
  %11 = load i64, i64* @S_IFMT, align 8
  %12 = and i64 %10, %11
  %13 = load i64, i64* @S_SHIFT, align 8
  %14 = lshr i64 %12, %13
  %15 = getelementptr inbounds i32, i32* %9, i64 %14
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.nilfs_dir_entry*, %struct.nilfs_dir_entry** %3, align 8
  %18 = getelementptr inbounds %struct.nilfs_dir_entry, %struct.nilfs_dir_entry* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
